<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:layout_gravity="start"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_edit"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Button1"/>

            <ImageButton
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_add"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="Button2"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/currentDateTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text"
        app:layout_constraintBottom_toTopOf="@id/getLocalTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/getLocalTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/get_local_time"
        android:onClick="setTime"
        app:layout_constraintTop_toBottomOf="@id/currentDateTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/setDateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_date"
        android:onClick="setDate"
        app:layout_constraintTop_toBottomOf="@id/getLocalTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/callMessageButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/call_message"
        android:onClick="onCallNotificationButtonClick"
        app:layout_constraintTop_toBottomOf="@id/setDateButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/selectText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/selectText"
        android:onClick="setSelectText"
        app:layout_constraintTop_toBottomOf="@id/callMessageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/editTextButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/edit_text"
        app:layout_constraintTop_toBottomOf="@id/selectText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
